fix: GEOT-716: GEOT-716: fix width group when post details visibl (#950)

--- a/packages/app-andrew/src/components/group/GroupHeader/styles.scss
+++ b/packages/app-andrew/src/components/group/GroupHeader/styles.scss
@@ -1,6 +1,6 @@
 @import '~@gtms/styles/scss/variables.scss';
 
-.mainHeader {
+.groupHeader {
   display: flex;
   padding: 8px;
   max-width: $tempWidth;
