--- a/packages/app-andrew/src/pages/group/styles.scss
+++ b/packages/app-andrew/src/pages/group/styles.scss
@@ -16,6 +16,10 @@
   display: flex;
   border-radius: 10px;
 
+  .widthMax {
+    max-width: 1100px;
+  }
+
   .groupCover {
     max-width: $tempWidth;
   }
@@ -74,6 +78,10 @@
       display: flex;
       max-width: $tempWidth;
       background: $theme1;
+
+      &.widthMax {
+        max-width: 1100px;
+      }
 
       &:after {
         content: '';
